argocd/applications/reviseur/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviseur
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: dev-dev-deployment-dev-deployment-deployment-c8e90e90
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: dev-dev-deployment-dev-deployment-deployment-c8e90e90
    spec:
      automountServiceAccountToken: false
      containers:
        - image: registry.ide-newton.ts.net/lab/reviseur
          imagePullPolicy: Always
          name: reviseur
          ports:
            - containerPort: 4111
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 4111
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
        runAsUser: 1000
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
