argocd/applications/reviseur/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviseur
spec:
  externalIPs: []
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4111
  selector:
    app: reviseur
  type: ClusterIP
